<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4 Dimensional</string>
    <string name="action_settings">Settings</string>
    <color name="blue">#FF30c0ff</color><!-- FF30c0ff -->
    
    <string name="startLabel">Start: </string>    
    <string name="current">Current:</string>
    <string name="end">End: </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="markLabel">Mark</string>

    
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    
    <string name="update_time">update_time</string>
    <string name="update_dist">update_dist</string>
    <string name="useDMS">useDMS</string>
    <string name="useMiles">useMiles</string>

</resources>
