<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="@dimen/half_horizontal_margin"
    	android:paddingRight="@dimen/half_horizontal_margin"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:paddingRight="@dimen/half_horizontal_margin"
                android:text="@string/startLabel"
                android:textSize="@dimen/textLabelSize" />
            
            <EditText
                android:id="@+id/startTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin" 	
        android:orientation="horizontal">          

            <EditText
                android:id="@+id/startLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="6"
                android:focusableInTouchMode="false"
                android:hint="@string/latitude" />

            <EditText
                android:id="@+id/startLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:focusable="false"
                android:ems="6"
                android:focusableInTouchMode="false"
                android:hint="@string/longitude" />

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"    
        android:paddingLeft="@dimen/half_horizontal_margin"
    	android:paddingRight="@dimen/half_horizontal_margin"    
        android:orientation="horizontal" >
            <TextView
	                android:id="@+id/endLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingRight="@dimen/half_horizontal_margin"
	                android:text="@string/end" 
	                android:textSize="@dimen/textLabelSize"/>
	        
			<EditText
                android:id="@+id/endTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="" />	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
            <EditText
                android:id="@+id/endLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="6"
                android:focusableInTouchMode="false"
                android:hint="@string/latitude"
				 />

            <EditText
                android:id="@+id/endLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="6"
                android:focusableInTouchMode="false"
                android:hint="@string/longitude"
				 />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">
			<TextView
	                android:id="@+id/summary"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="" 
	                android:textSize="@dimen/textLabelSize"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/half_horizontal_margin"
    	android:paddingRight="@dimen/half_horizontal_margin"
        android:orientation="horizontal" >
			<TextView
	                android:id="@+id/currentLabel"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/current" 
	                android:textSize="@dimen/textLabelSize"/>

    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
            <EditText
                android:id="@+id/currentLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="6"
                android:focusableInTouchMode="false"
				android:hint="@string/latitude" />

            <EditText
                android:id="@+id/currentLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="6"
                android:focusableInTouchMode="false"
                android:hint="@string/longitude" />

    </LinearLayout>


    
    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

	    <ToggleButton
	        android:id="@+id/start_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="toggleTimer"
	        android:textOff="@string/start"
	        android:textOn="@string/stop"
	        android:textSize="@dimen/textLabelSize" />
	
	    <Button
	        android:id="@+id/mark_button"
	        
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:onClick="mark"
	        android:text="@string/markLabel"
	        android:textSize="@dimen/textLabelSize" />
	</LinearLayout>
</LinearLayout>